Upgrade Java and Netbeans versions. Retired the DowelModule as it can no longer be compiled with later Java versions.